delete unused code, and set the tool popup image.

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -50,3 +50,4 @@
 "kRunAway" = "%@ run away!";
 "kGuessCorrect" = "Correct!";
 "kAllUserQuit" = "All users quit! Game Over!";
+"kConfirm" = "Confirm";
