--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -47,5 +47,7 @@
 
 "kRunAway" = "%@ 逃跑了!";
 "kGuessCorrect" = "猜对了!";
+"kGuessWrong" = "猜错了!";
 "kAllUserQuit" = "所有玩家都离开了,游戏结束!";
 "kConfirm" = "确定";
+"kSubmit" = "提交";
