--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -58,3 +58,8 @@
 
 "kQuitGameAlertTitle" = "Quit Game";
 "kQuitGameAlertMessage" = "Are you sure to quit the game?";
+
+"kContinue" = "Continue(%d)";
+"kExit" = "Exit";
+"kSave" = "Save";
+"kTurnResult" = "Result of turn";
