--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -64,3 +64,7 @@
 "kSave" = "保存";
 "kTurnResult" = "本轮结果";
 "kBuyColor" = "购买颜色";
+
+"kNoServerAvailable" = "非常抱歉，服务器已经满了，请稍候再试";
+
+"kBuyCoinsSucc" = "购买金币成功";
