add pick more color controller.

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -68,3 +68,5 @@
 "kSave" = "Save";
 "kTurnResult" = "Result of turn";
 "kBuyColor" = "Color Shop";
+"kConnectionRecover" = "Connection Recover";
+"kConnectionBroken" = "Connection Broken";
