add item manager

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -72,3 +72,4 @@
 "kNoServerAvailable" = "Sorry, server is full of users. Please try later.";
 
 "kBuyCoinsSucc" = "Purchasing coins successfully.";
+"kProcessingIAP" = "Processing purchasing request...";
