fix bugs and add the round number show.

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -72,3 +72,7 @@
 "kConnectionBroken" = "Connection Broken";
 "kNoServerAvailable" = "Sorry, server is full of users. Please try later.";
 "kBuyCoinsSucc" = "Purchasing coins successfully.";
+"kCongratulations" = "Congratulations!";
+"kPity" = "What a pity...";
+
+"kStartingGame" = "Starting Game...";
