--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -70,6 +70,6 @@
 "kProcessingIAP" = "处理购买请求中...";
 "kBuyCoinsSucc" = "购买金币成功";
 "kCongratulations" = "恭喜猜对了!";
-"kPity" = "请再接再厉...";
+"kPity" = "请再接再厉!";
 
 "kStartingGame" = "请求开始游戏中...";
