refactor draw/show view

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -77,3 +77,6 @@
 
 "kStartingGame" = "Starting Game...";
 "kProcessingIAP" = "Processing purchasing request...";
+
+"kCoinsNotEnoughTitle" = "";
+"kCoinsNotEnough" = "";
