--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -63,6 +63,9 @@
 "kQuitGameAlertTitle" = "Quit Game";
 "kQuitGameAlertMessage" = "Are you sure to quit the game?";
 
+"kDedutCoinQuitGameAlertMessage" = "If you quit the game, the system will deduct 1 coin.";
+"kNoCoinQuitGameAlertMessage" = "You have no coins, cannot quit the game!";
+
 "kContinue" = "Continue(%d)";
 "kExit" = "Exit";
 "kSave" = "Save";
