--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -145,3 +145,10 @@
 "kQuitGameTitle" = "Quit Game";
 "kQuitGameConfirm" = "Do you want to leave the room now?";
 
+"kShare_to_friends" = "Share to friends";
+"kReport_problems" = "Report problems";
+"kGive_some_advice" = "Give some advices";
+"kAbout_us" = "About us";
+"kMore_apps" = "More apps";
+"kGive_a_5-star_review" = "Give a 5-star review";
+
