update Settings Controller.

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -145,3 +145,18 @@
 "kQuitGameTitle" = "Quit Game";
 "kQuitGameConfirm" = "Do you want to leave the room now?";
 
+"kOldPasswordHolder" = "Input old password";
+"kNewPasswordHolder" = "Input new password";
+"kConfirmPasswordHolder" = "Confirm new password";
+"kNicknameHolder" = "Input new nickname";
+"kPasswordWrong" = "Old password not correct";
+"kPasswordDifferent" = "Two inputs different";
+"kPasswordIllegal" = "Password length not less than 6";
+
+"kUnset" = "Unset";
+"kUpdatingUser" = "Updating information...";
+"kUpdateUserSucc" = "Update information successfully.";
+"kUpdateUserFail" = "Update information failure. Try again";
+"kNoUpdate" = "No information update";
+"kInfoUnSaved" = "There is unsaved information. Do you want to quit now?";
+"kNotice" = "Notice";
