--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -118,8 +118,8 @@
 "kChangeRoom" = "更换房间中...";
 "kNoTipsItemTitle" = "消息";
 "kNoTipsItemMessage" = "你的道具不够了，是不是现在购买一些？";
-"kQuickMessage" = "%@说: 快点快点，我等到花儿都谢了！";
-"kWaitMessage" = "%@说: 等一会，我来给花儿洒洒水。";
+"kQuickMessage" = "快点快点，我等到花儿都谢了！";
+"kWaitMessage" = "等一会，我来给花儿洒洒水。";
 "kClickTooFast" = "你的点击频率太快了，不妨休息一下。";
 
 "kEnglish" = "英语";
