--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -156,7 +156,7 @@
 "kPasswordDifferent" = "Two inputs different";
 "kPasswordIllegal" = "Password length not less than 6";
 
-"kUnset" = "Unset";
+"kUnset" = "";
 "kUpdatingUser" = "Updating information...";
 "kUpdateUserSucc" = "Update information successfully.";
 "kUpdateUserFail" = "Update information failure. Try again";
