--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -192,3 +192,8 @@
 
 "kNewVersionMessage" = "Found new version %@, do you want to upgrade?";
 "kNewVersionTitle" = "New Version";
+
+"Remind Later" = "Remind Later";
+"Upgrade Now" = "Upgrade Now";
+"OK" = "OK";
+"Cancel" = "Cancel";
