--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -194,3 +194,8 @@
 "kNewVersionMessage" = "检测到有新版本[%@]，是否要升级到最新版本？";
 "kNewVersionTitle" = "版本升级";
 
+"Remind Later" = "下次提醒";
+"Upgrade Now" = "马上升级";
+"OK" = "确定";
+"Cancel" = "取消";
+
