add save percent display in shop change room doesn't require coins now

--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -121,8 +121,8 @@
 "kChangeRoom" = "更换房间中...";
 "kNoTipsItemTitle" = "消息";
 "kNoTipsItemMessage" = "你的道具不够了，是不是现在购买一些？";
-"kQuickMessage" = "快点快点，我等到花儿都谢了！";
-"kWaitMessage" = "等一会，我来给花儿洒洒水。";
+"kQuickMessage" = "快点，快点啦！";
+"kWaitMessage" = "等等，等等吧！";
 "kClickTooFast" = "你的点击频率太快了，不妨休息一下。";
 
 "kEnglish" = "英语";
@@ -142,8 +142,9 @@
 
 "kGotoCoinShop" = "金币充值";
 
+"kChangeRoomMaxTimes" = "你一天内已经换超过5次房间了，不能再换房间了。";
 "kChangeRoomTitle" = "更换房间";
-"kChangeRoomConfirm" = "换房间会影响当前一起玩的用户哦，同时需要花费你一个金币，确定换个房间吗？";
+"kChangeRoomConfirm" = "换房间会影响当前一起玩的用户哦，一天只能更换5次房间，确定换个房间吗？";
 "kQuitGameTitle" = "退出房间";
 "kQuitGameConfirm" = "请问是否要退出当前房间，回到主菜单？";
 
@@ -202,3 +203,4 @@
 "kDrawWord" = "你正在画: %@";
 "kAnswer" = "答案: %@";
 
+"kSavePercent" = "节省%02d%%";
