--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -179,6 +179,8 @@
 "kDelete" = "删除";
 
 "kShare_via" = "分享选项";
+"kShareAsPhoto" = "图片方式分享";
+"kShareAsGif" = "动画方式分享";
 "kSave_to_album" = "保存到相册";
 "kShare_via_Email" = "通过邮件分享";
 "kShare_via_Sina_weibo" = "通过新浪微博分享";
@@ -204,3 +206,5 @@
 "kAnswer" = "答案: %@";
 
 "kSavePercent" = "节省%02d%%";
+
+"kShareTitle" = "作品分享";
