--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -223,4 +223,5 @@
 "kShare_via_SMS" = "Share via SMS";
 "kShare_message_body" = "I found a very funny game recently, its name is \"draw lively\"\n%@";
 "kEmail_subject" = "Share a game";
+"kAbout_us_title" = "About us";
 
