--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -227,3 +227,4 @@
 "kShare_via_SMS" = "短信分享给朋友";
 "kShare_message_body" = "我最近发现了一个非常好玩的游戏，叫 \"draw lively\"\n%@";
 "kEmail_subject" = "分享个游戏";
+"kAbout_us_title" = "关于我们";
