--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -53,6 +53,7 @@
 "kAllUserQuit" = "All users quit! Game Over!";
 
 "kBuying" = "Sending request...";
+"kSendingRequest" = "Sending Request...";
 "kLoading" = "Loading...";
 
 "kConfirm" = "OK";
@@ -228,4 +229,14 @@
 "kShare_via_SMS" = "Share via SMS";
 "kShare_message_body" = "I found a very funny game recently, its name is \"draw lively\"\n%@";
 "kEmail_subject" = "Share a game";
+
+"kCreating_gif" = "Creating GIF Files...";
+"kShareOtherText" = "What An Awesome Drawing for %@";
+"kShareMeText" = "My Awesome Drawing for %@";
+"kShareSend" = "Send";
+
+"kPublishWeiboSucc" = "Message Sent";
+"kPublishWeiboFail" = "Fail to send message, please try again later.";
+
+"kFailCreateGIF" = "Sorry, fail to create GIF file.";
 
