--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -231,7 +231,7 @@
 "kHave_problems?" = "我在玩的过程中遇到些问题...";
 "kSay something..." = "说些什么吧 ...";
 "kShare_via_SMS" = "短信分享给朋友";
-"kShare_message_body" = "我最近发现了一个非常好玩的游戏，叫 \"draw lively\"\n%@";
+"kShare_message_body" = "我最近发现了一个非常好玩的游戏，叫《%@》\n。附上链接:\n%@";
 "kEmail_subject" = "分享个游戏";
 
 "kCreating_gif" = "正在生成GIF动画文件...";
