--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -252,4 +252,4 @@
 "kShareWeiboTitle" = "Share";
 
 "kNoTipItem" = "Sorry, you have no tip item, you can buy some in the shop.";
-
+"kMore_apps" = "More apps";
