--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -253,3 +253,4 @@
 
 "kNoTipItem" = "Sorry, you have no tip item, you can buy some in the shop.";
 "kMore_apps" = "More apps";
+"kNextStep" = "Next";
