--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -168,11 +168,11 @@
 "kInfoUnSaved" = "更改的信息尚未保存，你确定要退出吗？";
 "kNotice" = "通知";
 "kShare_to_friends" = "分享给好友";
-"kReport_problems" = "问题反馈";
-"kGive_some_advice" = "给些建议";
+"kReport_problems" = "报告问题";
+"kGive_some_advice" = "反馈意见";
 "kAbout_us" = "关于我们";
 "kMore_apps" = "更多应用";
-"kGive_a_5-star_review" = "给个好评吧";
+"kGive_a_5-star_review" = "给个好评";
 "kSure_delete" = "删除图片";
 "kAre_you_sure" = "确定删除?";
 "kOptions" = "选项";
@@ -225,8 +225,8 @@
 "kReplayTitle" = "回放作品";
 "kReplayShare" = "分享";
 
-"kReport_bug" = "问题反馈";
-"kAdvices" = "给些建议";
+"kReport_bug" = "报告问题";
+"kAdvices" = "反馈意见";
 "kInput_your_contact" = "您的联系方(EMAIL，QQ,手机号等）";
 "kHave_problems?" = "我在玩的过程中遇到些问题...";
 "kSay something..." = "说些什么吧 ...";
@@ -259,3 +259,4 @@
 "kSendingFeedback" = "正在发送...";
 "kNoTipItem" = "对不起，你没有锦囊了，请去商店购买。";
 "kMore_apps" = "更多应用";
+"kNextStep" = "下一步";
