--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -231,7 +231,9 @@
 "kHave_problems?" = "我在玩的过程中遇到些问题...";
 "kSay something..." = "说些什么吧 ...";
 "kShare_via_SMS" = "短信分享给朋友";
-"kShare_message_body" = "我最近在玩一个手机游戏，叫《%@》。很好玩哦。是不是觉得离线版的猜画游戏太慢了？现在给你们带来了福音，让你们随时随地在线尽享猜画欢乐。赶紧下载吧:\n%@";
+
+"kShare_message_body" = "你还在玩离线版的猜画游戏？太慢了！我们短暂的青春等不起！现在我用燃烧的生命发出内心的呐喊！严重推荐一款在线版的猜画游戏——《%@》！不要再等待！不要再犹豫了！赶紧下载吧！\n%@";
+
 "kEmail_subject" = "分享个游戏";
 
 "kCreating_gif" = "正在生成GIF动画文件...";
