update Report UI.

--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -232,7 +232,7 @@
 "kSay something..." = "说些什么吧 ...";
 "kShare_via_SMS" = "短信分享给朋友";
 
-"kShare_message_body" = "你还在玩离线版的猜画游戏？太慢了！我们短暂的青春等不起！现在我用燃烧的生命发出内心的呐喊！严重推荐一款在线版的猜画游戏——《%@》！不要再等待！不要再犹豫了！赶紧下载吧！\n%@";
+"kShare_message_body" = "你还在玩离线版的猜画游戏？太慢了！我们短暂的青春等不起！现在我用燃烧的生命发出内心的呐喊！隆重推荐一款在线版的猜画游戏——《%@》！不要再等待！不要再犹豫了！赶紧下载吧！\n%@";
 
 "kEmail_subject" = "分享个游戏";
 
