the last update.

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -255,3 +255,5 @@
 "kMore_apps" = "More apps";
 "kNextStep" = "Next";
 "kWordLengthTip" = "tips:word length is %d .";
+"kContentNull" = "Content can not be empty.";
+
