--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -227,14 +227,14 @@
 
 "kReport_bug" = "报告问题";
 "kAdvices" = "反馈意见";
-"kInput_your_contact" = "您的联系方(EMAIL，QQ,手机号等）";
-"kHave_problems?" = "我在玩的过程中遇到些问题...";
-"kSay something..." = "说些什么吧 ...";
+"kInput_your_contact" = "  联系方式(EMAIL,QQ,手机号等)";
+"kHave_problems?" = "";
+"kSay something..." = "";
 "kShare_via_SMS" = "短信分享给朋友";
 
-"kShare_message_body" = "你还在玩离线版的猜画游戏？太慢了！我们短暂的青春等不起！现在我用燃烧的生命发出内心的呐喊！隆重推荐一款在线版的猜画游戏——《%@》！不要再等待！不要再犹豫了！赶紧下载吧！\n%@";
+"kShare_message_body" = "你还在玩离线版的Draw Something游戏？太慢了！我们短暂的青春等不起！现在我用燃烧的生命发出内心的呐喊！隆重推荐一款在线版的猜画游戏——《%@》！不要再等待！不要再犹豫了！赶紧下载吧！\n%@";
 
-"kEmail_subject" = "分享个游戏";
+"kEmail_subject" = "分享［猜猜画画］移动版游戏";
 
 "kCreating_gif" = "正在生成GIF动画文件...";
 
@@ -253,7 +253,7 @@
 "kPaymentCannotMake" = "对不起，你的设备或者iOS版本未接受应用内程序购买功能。";
 
 "kSharePhotoEmailSubject" = "分享有趣的画画";
-"kSharePhotoEmailBody" = "一副有趣的画，分享来自%@";
+"kSharePhotoEmailBody" = "Hi，分享一副有趣的画，能猜到画的是什么吗？\n\n- 来自%@";
 "kShareWeiboTitle" = "微博分享";
 
 "kFeedbackSucc" = "感谢您的反馈";
@@ -262,5 +262,7 @@
 "kNoTipItem" = "对不起，你没有锦囊了，请去商店购买。";
 "kMore_apps" = "更多应用";
 "kNextStep" = "下一步";
-"kWordLengthTip" = "小提示：词的字数是 %d";
+"kWordLengthTip" = "温馨小提示：当前猜词的字数为［%d］";
 "kContentNull" = "内容不能为空哦。";
+
+"kNoDrawings" = "你还没有任何作品呢";
