--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -206,9 +206,9 @@
 "Cancel" = "取消";
 
 "kDrawWord" = "你正在畫: %@";
-"kAnswer" = "答案: %@";
+"kAnswer" = "答案: [%@]";
 
-"kNoWord" = "玩家沒選詞";
+"kNoWord" = "畫家逃跑了！";
 "kCleanDrawTitle" = "清屏";
 "kCleanDrawMessage" = "清屏之後之前所畫的東西都會消失，確定嗎？";
 "kSavePercent" = "節省%02d%%";
